--- a/css/learn.css
+++ b/css/learn.css
@@ -71,7 +71,8 @@
     background-color: #e4bad4;
 }
 .learn-answer-small {
-    padding: 30%;
+    text-align: center;
+    padding-top: 25%;
 }
 .learn-answer {
     padding: 30%;
